--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.0.1",
+    "react-tinder-card": "^1.3.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
